--- a/ImPlatformDemo/ImPlatformDemo.vcxproj
+++ b/ImPlatformDemo/ImPlatformDemo.vcxproj
@@ -71,12 +71,15 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)\..\ImPlatform;$(SolutionDir)\..\imgui;$(SolutionDir)\..\imgui\examples\libs\glfw\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\..\imgui\examples\libs\glfw;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
+    <IncludePath>$(SolutionDir)..\ImPlatform;$(SolutionDir)..\imgui;$(SolutionDir)..\imgui\examples\libs\glfw\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)..\imgui\examples\libs\glfw;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir)\..\ImPlatform;$(SolutionDir)\..\imgui;$(SolutionDir)\..\imgui\examples\libs\glfw\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\..\imgui\examples\libs\glfw;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
+    <IncludePath>$(SolutionDir)..\ImPlatform;$(SolutionDir)..\imgui;$(SolutionDir)..\imgui\examples\libs\glfw\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)..\imgui\examples\libs\glfw;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Label="Vcpkg">
+    <VcpkgEnabled>false</VcpkgEnabled>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
