update .gitignore for visual studio

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ ImPlatformDemo/x64/Debug/ImPlatformDemo.vcxproj.FileListAbsolute.txt
 *.vsidx
 ImPlatformDemo/.vs/ImPlatformDemo/v17
 *.config
+ImPlatformDemo/.vs
