--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,11 +9,11 @@ on:
 
 jobs:
   # ===========================================
-  # Windows Builds - MSBuild
+  # Windows Builds - MSBuild (existing .sln)
   # ===========================================
-  Build-Windows:
+  Build-Windows-MSBuild:
     runs-on: windows-2022
-    name: Windows - ${{ matrix.config }}
+    name: Windows MSBuild - ${{ matrix.config }}
 
     strategy:
       fail-fast: false
@@ -50,7 +50,6 @@ jobs:
           Expand-Archive -Path SDL2-devel.zip -DestinationPath .
           $sdlPath = (Get-ChildItem -Directory -Filter "SDL2-*").FullName
           echo "SDL2_DIR=$sdlPath" >> $env:GITHUB_ENV
-          # Copy SDL2.dll to output directory for runtime
           New-Item -ItemType Directory -Force -Path "ImPlatformDemo/x64/${{ matrix.config }}"
           Copy-Item "$sdlPath/lib/x64/SDL2.dll" "ImPlatformDemo/x64/${{ matrix.config }}/"
 
@@ -62,7 +61,6 @@ jobs:
           Expand-Archive -Path SDL3-devel.zip -DestinationPath .
           $sdlPath = (Get-ChildItem -Directory -Filter "SDL3-*").FullName
           echo "SDL3_DIR=$sdlPath" >> $env:GITHUB_ENV
-          # Copy SDL3.dll to output directory for runtime
           New-Item -ItemType Directory -Force -Path "ImPlatformDemo/x64/${{ matrix.config }}"
           Copy-Item "$sdlPath/lib/x64/SDL3.dll" "ImPlatformDemo/x64/${{ matrix.config }}/"
 
@@ -70,7 +68,6 @@ jobs:
         if: contains(matrix.config, 'Vulkan')
         shell: powershell
         run: |
-          # Download pre-built Vulkan headers and libs (from imgui CI)
           Invoke-WebRequest -Uri "https://github.com/user-attachments/files/22464296/vulkan_windows_libs_1.4.326.zip" -OutFile vulkan_libs.zip
           Expand-Archive -Path vulkan_libs.zip -DestinationPath vulkan_sdk
           $vulkanPath = "${{ github.workspace }}/vulkan_sdk/vulkan_windows_libs_1.4.326"
@@ -79,7 +76,6 @@ jobs:
       - name: Fix Project Files
         shell: powershell
         run: |
-          # Ensure projects use latest available toolset and SDK
           Get-ChildItem -Recurse -Filter "*.vcxproj" | ForEach-Object {
             $content = Get-Content $_.FullName
             $content = $content -Replace "<PlatformToolset>v\d{3}</PlatformToolset>", "<PlatformToolset>v143</PlatformToolset>"
@@ -95,22 +91,53 @@ jobs:
         uses: actions/upload-artifact@v4
         if: success()
         with:
-          name: ImPlatformDemo-${{ matrix.config }}
+          name: ImPlatformDemo-MSBuild-${{ matrix.config }}
           path: ImPlatformDemo/x64/${{ matrix.config }}/*.exe
           retention-days: 7
 
   # ===========================================
-  # Linux Builds - Sharpmake
+  # Windows Builds - CMake
   # ===========================================
-  Build-Linux:
-    runs-on: ubuntu-latest
-    name: Linux - ${{ matrix.platform }}_${{ matrix.gfx }}
+  Build-Windows-CMake:
+    runs-on: windows-2022
+    name: Windows CMake
 
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: [GLFW, SDL2, SDL3]
-        gfx: [OpenGL3, Vulkan]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Install Vulkan SDK
+        shell: powershell
+        run: |
+          Invoke-WebRequest -Uri "https://github.com/user-attachments/files/22464296/vulkan_windows_libs_1.4.326.zip" -OutFile vulkan_libs.zip
+          Expand-Archive -Path vulkan_libs.zip -DestinationPath vulkan_sdk
+          $vulkanPath = "${{ github.workspace }}\vulkan_sdk\vulkan_windows_libs_1.4.326"
+          echo "VULKAN_SDK=$vulkanPath" >> $env:GITHUB_ENV
+          echo "Vulkan_INCLUDE_DIR=$vulkanPath\Include" >> $env:GITHUB_ENV
+          echo "Vulkan_LIBRARY=$vulkanPath\Lib\vulkan-1.lib" >> $env:GITHUB_ENV
+
+      - name: Configure CMake
+        run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DIMPLATFORM_FETCH_DEPENDENCIES=ON
+
+      - name: Build
+        run: cmake --build build --config Release --parallel
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        if: success()
+        with:
+          name: ImPlatformDemo-CMake-Windows
+          path: build/Release/*.exe
+          retention-days: 7
+
+  # ===========================================
+  # Linux Builds - CMake
+  # ===========================================
+  Build-Linux-CMake:
+    runs-on: ubuntu-latest
+    name: Linux CMake
 
     steps:
       - name: Checkout
@@ -123,78 +150,48 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             build-essential \
+            cmake \
             libgl1-mesa-dev \
+            libglu1-mesa-dev \
             libxrandr-dev \
             libxinerama-dev \
             libxcursor-dev \
             libxi-dev \
             libxext-dev \
             libwayland-dev \
-            libxkbcommon-dev
-
-      - name: Install GLFW
-        if: matrix.platform == 'GLFW'
-        run: sudo apt-get install -y libglfw3-dev
-
-      - name: Install SDL2
-        if: matrix.platform == 'SDL2'
-        run: sudo apt-get install -y libsdl2-dev
+            libxkbcommon-dev \
+            libglfw3-dev \
+            libsdl2-dev \
+            libvulkan-dev
 
       - name: Install SDL3
-        if: matrix.platform == 'SDL3'
         run: |
-          # SDL3 may not be in apt yet, build from source
-          sudo apt-get install -y cmake
           git clone --depth 1 https://github.com/libsdl-org/SDL.git -b SDL3
           cd SDL
-          cmake -B build -DCMAKE_BUILD_TYPE=Release
+          cmake -B build -DCMAKE_BUILD_TYPE=Release -DSDL_SHARED=ON -DSDL_STATIC=OFF
           cmake --build build -j$(nproc)
           sudo cmake --install build
 
-      - name: Install Vulkan SDK
-        if: matrix.gfx == 'Vulkan'
-        run: |
-          sudo apt-get install -y libvulkan-dev vulkan-tools
+      - name: Configure CMake
+        run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DIMPLATFORM_FETCH_DEPENDENCIES=OFF
 
-      - name: Setup .NET for Sharpmake
-        uses: actions/setup-dotnet@v4
+      - name: Build
+        run: cmake --build build --parallel $(nproc)
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        if: success()
         with:
-          dotnet-version: '8.0.x'
-
-      - name: Install Sharpmake
-        run: |
-          dotnet tool install -g Sharpmake.Application || true
-          echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
-
-      - name: Generate Makefiles with Sharpmake
-        run: |
-          export PATH="$HOME/.dotnet/tools:$PATH"
-          cd sharpmake
-          sharpmake "/sources(@'main.sharpmake.cs')" "/outputDir(@'../generated')"
-
-      - name: Build ${{ matrix.platform }}_${{ matrix.gfx }}
-        run: |
-          CONFIG="${{ matrix.platform }}_${{ matrix.gfx }}_Debug"
-          if [ -f "generated/linux/Makefile" ]; then
-            make -C generated/linux -j$(nproc) config=$(echo $CONFIG | tr '[:upper:]' '[:lower:]')
-          else
-            echo "Generated Makefile not found. Sharpmake may have failed."
-            ls -la generated/ || echo "No generated directory"
-            exit 1
-          fi
+          name: ImPlatformDemo-CMake-Linux
+          path: build/ImPlatformDemo_*
+          retention-days: 7
 
   # ===========================================
-  # macOS Builds - Sharpmake
+  # macOS Builds - CMake
   # ===========================================
-  Build-MacOS:
+  Build-MacOS-CMake:
     runs-on: macos-latest
-    name: macOS - ${{ matrix.platform }}_${{ matrix.gfx }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: [GLFW, SDL2, SDL3]
-        gfx: [OpenGL3, Metal]
+    name: macOS CMake
 
     steps:
       - name: Checkout
@@ -204,31 +201,25 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          brew install glfw sdl2 sdl3 || true
+          brew install glfw sdl2 || true
+          # SDL3 might not be available via brew yet
+          brew install sdl3 || true
 
-      - name: Setup .NET for Sharpmake
-        uses: actions/setup-dotnet@v4
+      - name: Install Vulkan SDK
+        run: |
+          # Install MoltenVK for Vulkan support on macOS
+          brew install molten-vk || true
+
+      - name: Configure CMake
+        run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DIMPLATFORM_FETCH_DEPENDENCIES=ON
+
+      - name: Build
+        run: cmake --build build --parallel $(sysctl -n hw.ncpu)
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        if: success()
         with:
-          dotnet-version: '8.0.x'
-
-      - name: Install Sharpmake
-        run: |
-          dotnet tool install -g Sharpmake.Application || true
-          echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
-
-      - name: Generate Makefiles with Sharpmake
-        run: |
-          export PATH="$HOME/.dotnet/tools:$PATH"
-          cd sharpmake
-          sharpmake "/sources(@'main.sharpmake.cs')" "/outputDir(@'../generated')"
-
-      - name: Build ${{ matrix.platform }}_${{ matrix.gfx }}
-        run: |
-          CONFIG="${{ matrix.platform }}_${{ matrix.gfx }}_Debug"
-          if [ -f "generated/mac/Makefile" ]; then
-            make -C generated/mac -j$(sysctl -n hw.ncpu) config=$(echo $CONFIG | tr '[:upper:]' '[:lower:]')
-          else
-            echo "Generated Makefile not found. Sharpmake may have failed."
-            ls -la generated/ || echo "No generated directory"
-            exit 1
-          fi
+          name: ImPlatformDemo-CMake-macOS
+          path: build/ImPlatformDemo_*
+          retention-days: 7
