Disable Custom title bar by default and default position for demo

--- a/ImPlatformDemo/imgui.ini
+++ b/ImPlatformDemo/imgui.ini
@@ -1,37 +1,24 @@
 [Window][Debug##Default]
-Pos=259,38
-Size=400,400
-Collapsed=0
+Pos=0,0
+Size=80,80
 
-[Window][Image]
-Pos=23,248
-Size=313,297
-Collapsed=0
+[Window][ImPlatform Texture API Demo]
+Pos=747,74
+Size=763,831
 
 [Window][Dear ImGui Demo]
-Pos=448,61
-Size=550,680
-Collapsed=0
+Pos=1556,34
+Size=914,1097
 
-[Window][Custom Shader 0]
-Pos=31,100
-Size=255,299
-Collapsed=0
+[Window][Custom Shader: Linear Gradient]
+Pos=79,750
+Size=637,879
 
-[Window][Custom Shader 2]
-Pos=151,359
-Size=274,261
-Collapsed=0
-
-[Window][Custom Shader 1]
-Pos=327,99
-Size=238,287
-Collapsed=0
+[Window][Custom Shader: Arrow SDF]
+Pos=39,47
+Size=690,705
 
 [Window][##ImPlatformCustomTitleBar]
 Pos=0,0
-Size=1016,32
-Collapsed=0
-
-[Docking][Data]
+Size=2560,80
 
