--- a/ImPlatformDemo/imgui.ini
+++ b/ImPlatformDemo/imgui.ini
@@ -5,17 +5,21 @@ Collapsed=1
 
 [Window][Custom Shader: Arrow SDF]
 Pos=0,0
-Size=640,360
+Size=1264,911
+Collapsed=0
 
 [Window][ImPlatform Texture API Demo]
-Pos=640,0
-Size=640,360
+Pos=1264,0
+Size=1264,911
+Collapsed=0
 
 [Window][Custom Shader: Linear Gradient]
-Pos=0,360
-Size=640,360
+Pos=0,911
+Size=1264,911
+Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=640,360
-Size=640,360
+Pos=1391,980
+Size=997,720
+Collapsed=0
 
