--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,14 +72,22 @@ jobs:
         if: contains(matrix.config, 'Vulkan')
         shell: powershell
         run: |
-          # Download Vulkan SDK headers and libraries
-          $vulkanVersion = "1.3.290.0"
-          $vulkanUrl = "https://sdk.lunarg.com/sdk/download/$vulkanVersion/windows/VulkanSDK-$vulkanVersion-Installer.exe"
-          Write-Host "Downloading Vulkan SDK $vulkanVersion..."
-          Invoke-WebRequest -Uri $vulkanUrl -OutFile VulkanSDK-Installer.exe
+          $vulkanUrl = "https://sdk.lunarg.com/sdk/download/latest/windows/vulkan_sdk.exe?Human=true"
+          $maxRetries = 3
+          for ($i = 1; $i -le $maxRetries; $i++) {
+            try {
+              Write-Host "Downloading latest Vulkan SDK (attempt $i/$maxRetries)..."
+              Invoke-WebRequest -Uri $vulkanUrl -OutFile VulkanSDK-Installer.exe -TimeoutSec 120
+              break
+            } catch {
+              Write-Host "Download failed: $_"
+              if ($i -eq $maxRetries) { throw "Failed to download Vulkan SDK after $maxRetries attempts" }
+              Start-Sleep -Seconds 5
+            }
+          }
           Write-Host "Installing Vulkan SDK (silent)..."
           Start-Process -FilePath .\VulkanSDK-Installer.exe -ArgumentList "--accept-licenses --default-answer --confirm-command install" -Wait -NoNewWindow
-          $vulkanPath = "C:\VulkanSDK\$vulkanVersion"
+          $vulkanPath = (Get-ChildItem "C:\VulkanSDK" -Directory | Sort-Object Name -Descending | Select-Object -First 1).FullName
           echo "VULKAN_SDK=$vulkanPath" >> $env:GITHUB_ENV
           Write-Host "VULKAN_SDK set to: $vulkanPath"
 
@@ -207,13 +215,22 @@ jobs:
       - name: Install Vulkan SDK
         shell: powershell
         run: |
-          $vulkanVersion = "1.3.290.0"
-          $vulkanUrl = "https://sdk.lunarg.com/sdk/download/$vulkanVersion/windows/VulkanSDK-$vulkanVersion-Installer.exe"
-          Write-Host "Downloading Vulkan SDK $vulkanVersion..."
-          Invoke-WebRequest -Uri $vulkanUrl -OutFile VulkanSDK-Installer.exe
+          $vulkanUrl = "https://sdk.lunarg.com/sdk/download/latest/windows/vulkan_sdk.exe?Human=true"
+          $maxRetries = 3
+          for ($i = 1; $i -le $maxRetries; $i++) {
+            try {
+              Write-Host "Downloading latest Vulkan SDK (attempt $i/$maxRetries)..."
+              Invoke-WebRequest -Uri $vulkanUrl -OutFile VulkanSDK-Installer.exe -TimeoutSec 120
+              break
+            } catch {
+              Write-Host "Download failed: $_"
+              if ($i -eq $maxRetries) { throw "Failed to download Vulkan SDK after $maxRetries attempts" }
+              Start-Sleep -Seconds 5
+            }
+          }
           Write-Host "Installing Vulkan SDK (silent)..."
           Start-Process -FilePath .\VulkanSDK-Installer.exe -ArgumentList "--accept-licenses --default-answer --confirm-command install" -Wait -NoNewWindow
-          $vulkanPath = "C:\VulkanSDK\$vulkanVersion"
+          $vulkanPath = (Get-ChildItem "C:\VulkanSDK" -Directory | Sort-Object Name -Descending | Select-Object -First 1).FullName
           echo "VULKAN_SDK=$vulkanPath" >> $env:GITHUB_ENV
 
       - name: Configure CMake
